// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hashMap1 1`] = `
Array [
  "317cb964a41f5dc24900f911d245ec1d1a79644e65147d37d67250588bba72e6",
  "1e6e4dfeae45d6f0ac2b1f32902f8a2bafde5abc2385d09b02aedfbbe1f91128",
  "8fc2632b66eb171b5c6b991d87e69b0452663f48f730685eccacb69ae4c26466",
  "0a544c39c7aa2dd9b0090962c5a8f1a94156e55080f03f71ac1b261581fcadf6",
  "f1b43521ed62c4439366b8dfa5189b0a1710bb824f426da37b022e933fdf07c1",
  "32936bef7af2b472fb33a490b0b4d42cff6846a97350fc4323971b03414045c2",
  "54023524dc1664e271d3a22820bcff8f1880bfe718a54c19772a63117755973e",
  "5ba6952699cd405e702737e668e50a14e82f4c5e0a9004aa6536fcdce8701147",
  "8afe51a88f760804aef6b42ed9a16ff12597f88d614812714187ec35c63a1a9f",
  "8e8bb82e383bc9377e4373e3111e6ad502120340657b165fa619015342147091",
  "bf2076be34129e8976678f90fb8e4a75ee458aeb9943eea92bfc55f3eb6c7812",
  "d22e0ca6688f6783fe50cc540c7ee4342be6360ec0acce1f94f24864691669d9",
  "3e320d3f8c7f1ba6500e4e0729471131d586b08a35e38a266dab87b6d9788bf3",
  "dc2e95da8f27a4f5fd8a54ad2c8a8c5041d8c096915e4c759d37149f3b7a6222",
  "ccb8689eee9c90e5a633d8b3475b92fb7f7cc0a1d51501d4eda05a6ce3349c4b",
  "8621723f459afe45223f5ea32738b7509093b8c919f8c7bc31eba915b18209f9",
]
`;

exports[`hashMap2 1`] = `
Array [
  "317cb964a41f5dc24900f911d245ec1d1a79644e65147d37d67250588bba72e6",
  "ce250a29818f65ddf312f44927f22b4bb4992c10c4ce60d2dc4cce645839af3c",
  "1e6e4dfeae45d6f0ac2b1f32902f8a2bafde5abc2385d09b02aedfbbe1f91128",
  "8fc2632b66eb171b5c6b991d87e69b0452663f48f730685eccacb69ae4c26466",
  "0a544c39c7aa2dd9b0090962c5a8f1a94156e55080f03f71ac1b261581fcadf6",
  "f1b43521ed62c4439366b8dfa5189b0a1710bb824f426da37b022e933fdf07c1",
  "32936bef7af2b472fb33a490b0b4d42cff6846a97350fc4323971b03414045c2",
  "54023524dc1664e271d3a22820bcff8f1880bfe718a54c19772a63117755973e",
  "5ba6952699cd405e702737e668e50a14e82f4c5e0a9004aa6536fcdce8701147",
  "8afe51a88f760804aef6b42ed9a16ff12597f88d614812714187ec35c63a1a9f",
  "8e8bb82e383bc9377e4373e3111e6ad502120340657b165fa619015342147091",
  "bf2076be34129e8976678f90fb8e4a75ee458aeb9943eea92bfc55f3eb6c7812",
  "d22e0ca6688f6783fe50cc540c7ee4342be6360ec0acce1f94f24864691669d9",
  "3e320d3f8c7f1ba6500e4e0729471131d586b08a35e38a266dab87b6d9788bf3",
  "dc2e95da8f27a4f5fd8a54ad2c8a8c5041d8c096915e4c759d37149f3b7a6222",
  "ccb8689eee9c90e5a633d8b3475b92fb7f7cc0a1d51501d4eda05a6ce3349c4b",
  "8621723f459afe45223f5ea32738b7509093b8c919f8c7bc31eba915b18209f9",
]
`;

exports[`hashes 1`] = `
Array [
  "dc4c8669df128318c5790c414c870cc76c585268552851e78d3ee8604dbec0e3",
  "6e340b9cffb37a989ca544e6bb780a2c78901d3fb33738768511a30617afa01d",
  "d13a28d9c0f2a8648c95ba2d4df8cd2fbe28718a197bd0a677f2622eb97cc050",
  "7237e2203aea546479d4a5ed285efe45ef30d4e005808aa25eaf0789a2cbb2cf",
  "2b4c342f5433ebe591a1da77e013d1b72475562d48578dca8b84bac6651c3cb9",
  "162d7370ef40ad29b37baff65849aa0318cb09d705bcc36f8c17899e35a4706a",
  "9291cc5338e1d5c5e570870ec49ffbeb64543703b3b5d19359dbb1d1e02a3ded",
  "0eb16f85782cc2eb1b1f201a9e584aaac59ad4532324e71fb140768caa23e71d",
  "317cb964a41f5dc24900f911d245ec1d1a79644e65147d37d67250588bba72e6",
  "b9a96d705d26f89f7f7e02be6649515ccf176cc8482f0c5e25f338b0778ac942",
  "ce250a29818f65ddf312f44927f22b4bb4992c10c4ce60d2dc4cce645839af3c",
  "1e0a526e68cc247430e66dba7f7a602ad621b972fd8999f87793827aea59f348",
  "8621723f459afe45223f5ea32738b7509093b8c919f8c7bc31eba915b18209f9",
  "edb36157ff4061f1417a5d03d689cec3a4d2aefbcf1b7c8b27ff7a2a32ea4ad7",
]
`;

exports[`objects 1`] = `
"[
  0,
  null,
  0.7071067811865476,
  NaN,
  undefined,
  'hello world',
  '{\\"hello\\":\\"world\\"}',
  'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in sem porttitor, egestas lacus eu, aliquet mi. Maecenas laoreet, purus in malesuada finibus, odio lacus finibus felis, et iaculis quam dolor vel velit. Morbi vel ornare purus. Phasellus et lacus tempor, fringilla lectus nec, ullamcorper justo. Duis id porttitor massa, vel facilisis ligula. Vestibulum vitae pretium sem. Curabitur diam diam, finibus quis efficitur ut, sodales eget mi. Vestibulum sed egestas lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae',
  [
    '\\\\u0000', '\\\\u0001', '\\\\u0002', '\\\\u0003', '\\\\u0004', '\\\\u0005', '\\\\u0006',
    '\\\\u0007', '\\\\b',     '\\\\t',     '\\\\n',     '\\\\u000b', '\\\\f',     '\\\\r',
    '\\\\u000e', '\\\\u000f', '\\\\u0010', '\\\\u0011', '\\\\u0012', '\\\\u0013', '\\\\u0014',
    '\\\\u0015', '\\\\u0016', '\\\\u0017', '\\\\u0018', '\\\\u0019', '\\\\u001a', '\\\\u001b',
    '\\\\u001c', '\\\\u001d', '\\\\u001e', '\\\\u001f', ' ',      '!',      '\\"',
    '#',      '$',      '%',      '&',      \\"'\\",      '(',      ')',
    '*',      '+',      ',',      '-',      '.',      '/',      '0',
    '1',      '2',      '3',      '4',      '5',      '6',      '7',
    '8',      '9',      ':',      ';',      '<',      '=',      '>',
    '?',      '@',      'A',      'B',      'C',      'D',      'E',
    'F',      'G',      'H',      'I',      'J',      'K',      'L',
    'M',      'N',      'O',      'P',      'Q',      'R',      'S',
    'T',      'U',      'V',      'W',      'X',      'Y',      'Z',
    '[',      '\\\\\\\\',     ']',      '^',      '_',      '\`',      'a',
    'b',      'c',
    ... 28 more items
  ],
  '\\\\u0000\\\\u0001\\\\u0002\\\\u0003\\\\u0004\\\\u0005\\\\u0006\\\\u0007\\\\b\\\\t\\\\n' +
    '\\\\u000b\\\\f\\\\r\\\\u000e\\\\u000f\\\\u0010\\\\u0011\\\\u0012\\\\u0013\\\\u0014\\\\u0015\\\\u0016\\\\u0017\\\\u0018\\\\u0019\\\\u001a\\\\u001b\\\\u001c\\\\u001d\\\\u001e\\\\u001f !\\"#$%&\\\\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\\\\\]^_\`abcdefghijklmnopqrstuvwxyz{|}~',
  <Buffer 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f 10 11 12 13 14 15 16 17 18 19 1a 1b 1c 1d 1e 1f 20 21 22 23 24 25 26 27 28 29 2a 2b 2c 2d 2e 2f 30 31 ... 206 more bytes>,
  {
    this: {
      is: {
        a: {
          long: {
            chain: {
              of: {
                properties: {
                  oh: { look: { its: { circular: [Circular] } } },
                  that: { is: { circular: [Circular], inWays: 2 } }
                }
              }
            }
          }
        }
      }
    }
  },
  [Circular],
  {
    dc4c8669df128318c5790c414c870cc76c585268552851e78d3ee8604dbec0e3: 0,
    '6e340b9cffb37a989ca544e6bb780a2c78901d3fb33738768511a30617afa01d': null,
    d13a28d9c0f2a8648c95ba2d4df8cd2fbe28718a197bd0a677f2622eb97cc050: 0.7071067811865476,
    '7237e2203aea546479d4a5ed285efe45ef30d4e005808aa25eaf0789a2cbb2cf': NaN,
    '2b4c342f5433ebe591a1da77e013d1b72475562d48578dca8b84bac6651c3cb9': undefined,
    '162d7370ef40ad29b37baff65849aa0318cb09d705bcc36f8c17899e35a4706a': 'hello world',
    '9291cc5338e1d5c5e570870ec49ffbeb64543703b3b5d19359dbb1d1e02a3ded': '{\\"hello\\":\\"world\\"}',
    '0eb16f85782cc2eb1b1f201a9e584aaac59ad4532324e71fb140768caa23e71d': 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in sem porttitor, egestas lacus eu, aliquet mi. Maecenas laoreet, purus in malesuada finibus, odio lacus finibus felis, et iaculis quam dolor vel velit. Morbi vel ornare purus. Phasellus et lacus tempor, fringilla lectus nec, ullamcorper justo. Duis id porttitor massa, vel facilisis ligula. Vestibulum vitae pretium sem. Curabitur diam diam, finibus quis efficitur ut, sodales eget mi. Vestibulum sed egestas lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae',
    '317cb964a41f5dc24900f911d245ec1d1a79644e65147d37d67250588bba72e6': [
      '\\\\u0000', '\\\\u0001', '\\\\u0002', '\\\\u0003', '\\\\u0004', '\\\\u0005', '\\\\u0006',
      '\\\\u0007', '\\\\b',     '\\\\t',     '\\\\n',     '\\\\u000b', '\\\\f',     '\\\\r',
      '\\\\u000e', '\\\\u000f', '\\\\u0010', '\\\\u0011', '\\\\u0012', '\\\\u0013', '\\\\u0014',
      '\\\\u0015', '\\\\u0016', '\\\\u0017', '\\\\u0018', '\\\\u0019', '\\\\u001a', '\\\\u001b',
      '\\\\u001c', '\\\\u001d', '\\\\u001e', '\\\\u001f', ' ',      '!',      '\\"',
      '#',      '$',      '%',      '&',      \\"'\\",      '(',      ')',
      '*',      '+',      ',',      '-',      '.',      '/',      '0',
      '1',      '2',      '3',      '4',      '5',      '6',      '7',
      '8',      '9',      ':',      ';',      '<',      '=',      '>',
      '?',      '@',      'A',      'B',      'C',      'D',      'E',
      'F',      'G',      'H',      'I',      'J',      'K',      'L',
      'M',      'N',      'O',      'P',      'Q',      'R',      'S',
      'T',      'U',      'V',      'W',      'X',      'Y',      'Z',
      '[',      '\\\\\\\\',     ']',      '^',      '_',      '\`',      'a',
      'b',      'c',
      ... 28 more items
    ],
    b9a96d705d26f89f7f7e02be6649515ccf176cc8482f0c5e25f338b0778ac942: '\\\\u0000\\\\u0001\\\\u0002\\\\u0003\\\\u0004\\\\u0005\\\\u0006\\\\u0007\\\\b\\\\t\\\\n' +
      '\\\\u000b\\\\f\\\\r\\\\u000e\\\\u000f\\\\u0010\\\\u0011\\\\u0012\\\\u0013\\\\u0014\\\\u0015\\\\u0016\\\\u0017\\\\u0018\\\\u0019\\\\u001a\\\\u001b\\\\u001c\\\\u001d\\\\u001e\\\\u001f !\\"#$%&\\\\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\\\\\]^_\`abcdefghijklmnopqrstuvwxyz{|}~',
    ce250a29818f65ddf312f44927f22b4bb4992c10c4ce60d2dc4cce645839af3c: <Buffer 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f 10 11 12 13 14 15 16 17 18 19 1a 1b 1c 1d 1e 1f 20 21 22 23 24 25 26 27 28 29 2a 2b 2c 2d 2e 2f 30 31 ... 206 more bytes>,
    b4b0cd9fb2cf5bb2940a75811b6e09000a814f989a54f02da977ca48145b626a: {
      this: {
        is: {
          a: {
            long: {
              chain: {
                of: {
                  properties: {
                    oh: { look: { its: { circular: [Circular] } } },
                    that: { is: { circular: [Circular], inWays: 2 } }
                  }
                }
              }
            }
          }
        }
      }
    },
    '1eb2b30a18a257a6fd8662cfccb7f43e1b014c1fc6c7ee555053abf7691c3d4d': [Circular]
  }
]"
`;

exports[`serialized 1`] = `
"
00000000070000000003000000000000000000000000000000000003cd3b7f66
9ea0e63f0000000003010000000000f07f000000000900000000020b00000068
656c6c6f20776f726c640000000002110000007b2268656c6c6f223a22776f72
6c64227d00000000023a0200004c6f72656d20697073756d20646f6c6f722073
697420616d65742c20636f6e73656374657475722061646970697363696e6720
656c69742e205072616573656e7420696e2073656d20706f72747469746f722c
2065676573746173206c616375732065752c20616c6971756574206d692e204d
616563656e6173206c616f726565742c20707572757320696e206d616c657375
6164612066696e696275732c206f64696f206c616375732066696e6962757320
66656c69732c20657420696163756c6973207175616d20646f6c6f722076656c
2076656c69742e204d6f7262692076656c206f726e6172652070757275732e20
50686173656c6c7573206574206c616375732074656d706f722c206672696e67
696c6c61206c6563747573206e65632c20756c6c616d636f72706572206a7573
746f2e204475697320696420706f72747469746f72206d617373612c2076656c
20666163696c69736973206c6967756c612e20566573746962756c756d207669
746165207072657469756d2073656d2e20437572616269747572206469616d20
6469616d2c2066696e696275732071756973206566666963697475722075742c
20736f64616c65732065676574206d692e20566573746962756c756d20736564
2065676573746173206c65637475732e20566573746962756c756d20616e7465
20697073756d207072696d697320696e206661756369627573206f726369206c
756374757320657420756c74726963657320706f737565726520637562696c69
6120637572616500000000070000000002010000000000000000020100000001
0000000002010000000200000000020100000003000000000201000000040000
0000020100000005000000000201000000060000000002010000000700000000
020100000008000000000201000000090000000002010000000a000000000201
0000000b0000000002010000000c0000000002010000000d0000000002010000
000e0000000002010000000f0000000002010000001000000000020100000011
0000000002010000001200000000020100000013000000000201000000140000
0000020100000015000000000201000000160000000002010000001700000000
020100000018000000000201000000190000000002010000001a000000000201
0000001b0000000002010000001c0000000002010000001d0000000002010000
001e0000000002010000001f0000000002010000002000000000020100000021
0000000002010000002200000000020100000023000000000201000000240000
0000020100000025000000000201000000260000000002010000002700000000
020100000028000000000201000000290000000002010000002a000000000201
0000002b0000000002010000002c0000000002010000002d0000000002010000
002e0000000002010000002f0000000002010000003000000000020100000031
0000000002010000003200000000020100000033000000000201000000340000
0000020100000035000000000201000000360000000002010000003700000000
020100000038000000000201000000390000000002010000003a000000000201
0000003b0000000002010000003c0000000002010000003d0000000002010000
003e0000000002010000003f0000000002010000004000000000020100000041
0000000002010000004200000000020100000043000000000201000000440000
0000020100000045000000000201000000460000000002010000004700000000
020100000048000000000201000000490000000002010000004a000000000201
0000004b0000000002010000004c0000000002010000004d0000000002010000
004e0000000002010000004f0000000002010000005000000000020100000051
0000000002010000005200000000020100000053000000000201000000540000
0000020100000055000000000201000000560000000002010000005700000000
020100000058000000000201000000590000000002010000005a000000000201
0000005b0000000002010000005c0000000002010000005d0000000002010000
005e0000000002010000005f0000000002010000006000000000020100000061
0000000002010000006200000000020100000063000000000201000000640000
0000020100000065000000000201000000660000000002010000006700000000
020100000068000000000201000000690000000002010000006a000000000201
0000006b0000000002010000006c0000000002010000006d0000000002010000
006e0000000002010000006f0000000002010000007000000000020100000071
0000000002010000007200000000020100000073000000000201000000740000
0000020100000075000000000201000000760000000002010000007700000000
020100000078000000000201000000790000000002010000007a000000000201
0000007b0000000002010000007c0000000002010000007d0000000002010000
007e0000000002010000007f0000000001000000000280000000000102030405
060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f202122232425
262728292a2b2c2d2e2f303132333435363738393a3b3c3d3e3f404142434445
464748494a4b4c4d4e4f505152535455565758595a5b5c5d5e5f606162636465
666768696a6b6c6d6e6f707172737475767778797a7b7c7d7e7f000000000800
010000000102030405060708090a0b0c0d0e0f101112131415161718191a1b1c
1d1e1f202122232425262728292a2b2c2d2e2f303132333435363738393a3b3c
3d3e3f404142434445464748494a4b4c4d4e4f505152535455565758595a5b5c
5d5e5f606162636465666768696a6b6c6d6e6f707172737475767778797a7b7c
7d7e7f808182838485868788898a8b8c8d8e8f909192939495969798999a9b9c
9d9e9fa0a1a2a3a4a5a6a7a8a9aaabacadaeafb0b1b2b3b4b5b6b7b8b9babbbc
bdbebfc0c1c2c3c4c5c6c7c8c9cacbcccdcecfd0d1d2d3d4d5d6d7d8d9dadbdc
dddedfe0e1e2e3e4e5e6e7e8e9eaebecedeeeff0f1f2f3f4f5f6f7f8f9fafbfc
fdfeff0000000006000000000204000000746869730000000006000000000202
000000697300000000066c00000000000000060000000002040000006c6f6e67
0000000006000000000205000000636861696e00000000060000000002020000
006f66000000000600000000020a00000070726f706572746965730000000006
0000000002020000006f6800000000060000000002040000006c6f6f6b000000
0006000000000203000000697473000000000600000000020800000063697263
756c6172010000008b0000008b0000008b000000000000000204000000746861
740000000006910000000000000006a200000001000000000000000206000000
696e57617973000000000300000000000000408b0000008b0000008b0000008b
0000008b0000008b0000008b0000008b0000008b0000008b0000000100000000
0000000600000000024000000064633463383636396466313238333138633537
3930633431346338373063633736633538353236383535323835316537386433
6565383630346462656330653302000000000000000240000000366533343062
3963666662333761393839636135343465366262373830613263373839303164
3366623333373338373638353131613330363137616661303164030000000000
0000024000000064313361323864396330663261383634386339356261326434
6466386364326662653238373138613139376264306136373766323632326562
3937636330353004000000000000000240000000373233376532323033616561
3534363437396434613565643238356566653435656633306434653030353830
3861613235656166303738396132636262326366050000000000000002400000
0032623463333432663534333365626535393161316461373765303133643162
3732343735353632643438353738646361386238346261633636353163336362
3906000000000000000240000000313632643733373065663430616432396233
3762616666363538343961613033313863623039643730356263633336663863
3137383939653335613437303661070000000000000002400000003932393163
6335333338653164356335653537303837306563343966666265623634353433
3730336233623564313933353964626231643165303261336465640800000000
0000000240000000306562313666383537383263633265623162316632303161
3965353834616161633539616434353332333234653731666231343037363863
6161323365373164090000000000000002400000003331376362393634613431
6635646332343930306639313164323435656331643161373936343465363531
3437643337643637323530353838626261373265360a00000000000000024000
0000623961393664373035643236663839663766376530326265363634393531
3563636631373663633834383266306335653235663333386230373738616339
34328c0000000000000002400000006365323530613239383138663635646466
3331326634343932376632326234626234393932633130633463653630643264
6334636365363435383339616633638d00000000000000024000000062346230
6364396662326366356262323934306137353831316236653039303030613831
346639383961353466303264613937376361343831343562363236618e000000
0000000002400000003165623262333061313861323537613666643836363263
6663636237663433653162303134633166633663376565353535303533616266
373639316333643464010000008b0000008b000000"
`;
